# mixmaxCUDA

./: .clang-format  CMakeLists.txt  main.cpp  main.cu
.github/workflows/: clang-format-check.yml
include/: MixMaxRng.h  clean.h  mixmax.hpp  mixmax_skip_N17.c  mixmax_skip_N17.h  mixmax_skip_N8.c  mixmax_skip_N8.h  original.h
include/mixmax/: mixmax.h
include/mixmax/private/: mixmax_skip_N240.c
mixmax/: mixmax.h
test/: CMakeLists.txt  main.cpp  main.cu
